examples/test/testpolicy2494.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2494
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key26: value7
      key15: value2
      key30: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value25
          key16: value44
          key42: value6
      podSelector:
        matchLabels:
          key13: value17
